--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
   </head>
   <body>
 
+    <div class="row">
+      <!-- Barra superior-->
+      <div class="col s12 card">
+        <div class="row card-content amber darken-3">
+          <div class="col s12">
+            <img src="img/img-1.jpg" class="logo"/>
+          </div>
+
+        </div>
+      </div>
+
+
+    </div>
+
   </body>
 </html>
