--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="col s12 card">
         <div class="row card-content amber darken-3">
           <div class="col s12">
-            <img src="img/img-1.jpg" class="logo"/>
+            <img src="img/logo.jpg" class="logo"/>
           </div>
 
         </div>
