Se crea nuevamente la barra sup con el LOGO

--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
 
     <div class="row">
       <!-- Barra superior-->
-      <div class="col s12 card">
+      <!-- <div class="col s12 card">
         <div class="row card-content amber darken-3">
           <div class="col s12">
             <img src="img/logo.jpg" class="logo"/>
           </div>
-
         </div>
+      </div> -->
+      <div class="navbar-fixed">
+        <nav>
+          <div class="nav-wrapper blue darken-2">
+            <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
+
+          </div>
+        </nav>
+
       </div>
 
 
