--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <nav>
           <div class="nav-wrapper blue darken-2">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
+            <ul class="right hide-on-med-and-down">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="history.html">Estuve en ...</a></li>
+              <li><a href="the_best.html">Mejores viajes</a></li>
+              <li> <a href="suggestions.html">Sugerencias</a></li>
+            </ul>
 
           </div>
         </nav>
