--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <div class="nav-wrapper blue darken-2">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="history.html">Estuve en ...</a></li>
-              <li><a href="the_best.html">Mejores viajes</a></li>
-              <li> <a href="suggestions.html">Sugerencias</a></li>
+              <li><a href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
+              <li><a href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
+              <li><a href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
+              <li><a href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
 
           </div>
@@ -41,5 +41,7 @@
 
     </div>
 
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
