Se agrega la clase btn a los enlaces

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <div class="nav-wrapper blue darken-2">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
-              <li><a href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
-              <li><a href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
-              <li><a href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
+              <li><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
+              <li><a class="btn" href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
+              <li><a class="btn" href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
+              <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
           </div>
         </nav>
