--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
       </div> -->
       <div class="navbar-fixed">
-        <nav>
-          <div class="nav-wrapper blue darken-2">
+        <nav class="nav-extended">
+          <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
               <li><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
@@ -32,6 +32,9 @@
               <li><a class="btn" href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
               <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
+          </div>
+          <div class="nav-content center">
+            <span class="nav-title">Arquitecto de mi propio destino</span>
           </div>
         </nav>
 
