Se agrega la clase active para el menu de opciones

--- a/index.html
+++ b/index.html
@@ -14,20 +14,12 @@
   <body>
 
     <div class="row">
-      <!-- Barra superior-->
-      <!-- <div class="col s12 card">
-        <div class="row card-content amber darken-3">
-          <div class="col s12">
-            <img src="img/logo.jpg" class="logo"/>
-          </div>
-        </div>
-      </div> -->
       <div class="navbar-fixed">
         <nav class="nav-extended">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
-              <li><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
+              <li class="active"><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
               <li><a class="btn" href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
               <li><a class="btn" href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
               <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
