--- a/the_best.html
+++ b/the_best.html
@@ -15,16 +15,18 @@
 
     <div class="row">
       <div class="navbar-fixed">
-        <nav>
-          <div class="nav-wrapper blue darken-2">
+        <nav class="nav-extended">
+          <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
-              <li><a href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
-              <li><a href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
-              <li><a href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
+              <li><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
+              <li><a class="btn" href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
+              <li class="active"><a class="btn" href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
+              <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
-
+          </div>
+          <div class="nav-content center">
+            <span class="nav-title">Arquitecto de mi propio destino</span>
           </div>
         </nav>
 
