--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@
   </head>
   <body>
 
+  <!--  <div class="row">
+
+      <div class="s12 col">
+        <div class="navbar-fixed">
+          <nav class="nav">
+            <div class="nav-wrapper">
+              <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
+              <ul class="right hide-on-med-and-down">
+                <li class="active"><a class="btn" href="index.html"><i class="small material-icons left">home</i>Inicio</a></li>
+                <li><a class="btn" href="history.html"><i class="small material-icons left">location_on</i>Estuve en ...</a></li>
+                <li><a class="btn" href="the_best.html"><i class="small material-icons left">start</i>Mejores viajes</a></li>
+                <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="s12 col">Arquitecto de mi propio destino</div>
+      <div class="s6 col">
+        <div class="collection">
+          <a href="#" class="collection-item">face</a>
+          <a href="#" class="collection-item">twitter</a>
+          <a href="#" class="collection-item">pinterest</a>
+          <a href="#" class="collection-item">youtube</a>
+          <a href="#" class="collection-item">instagram</a>
+        </div>
+      </div>
+
+      </div>
+    -->
     <div class="row">
       <div class="navbar-fixed">
         <nav class="nav-extended">
@@ -25,15 +60,29 @@
               <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
           </div>
-          <div class="nav-content center">
-            <span class="nav-title">Arquitecto de mi propio destino</span>
-          </div>
+          <div class="s10 col push-s2"> <h5>Arquitecto de mi propio destino...</h5></div>
         </nav>
 
       </div>
+    </div>
+    <div class="row">
+      <div class="s10 col push-s2">Logo
 
+      </div>
 
     </div>
+
+    <div class="row">
+      <div class="s3 col">
+        columna izq
+      </div>
+      <div class="s9 col">
+        columna derecha
+      </div>
+    </div>
+
+
+
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
