Se agrega slogan

--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
 
       <div class="s12 col">Arquitecto de mi propio destino</div>
       <div class="s6 col">
-        <div class="collection">
-          <a href="#" class="collection-item">face</a>
-          <a href="#" class="collection-item">twitter</a>
-          <a href="#" class="collection-item">pinterest</a>
-          <a href="#" class="collection-item">youtube</a>
-          <a href="#" class="collection-item">instagram</a>
-        </div>
+
       </div>
 
       </div>
@@ -60,25 +54,24 @@
               <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
           </div>
-          <div class="s10 col push-s2"> <h5>Arquitecto de mi propio destino...</h5></div>
         </nav>
-
       </div>
-    </div>
-    <div class="row">
-      <div class="s10 col push-s2">Logo
-
+      <div class="s12 col teal lighten-2 center"> <h5>Arquitecto de mi propio destino...</h5></div>
+      <div class="row">
+        <div class="s2 col">
+          <div class="collection">
+            <a href="#" class="collection-item">face</a>
+            <a href="#" class="collection-item">twitter</a>
+            <a href="#" class="collection-item">pinterest</a>
+            <a href="#" class="collection-item">youtube</a>
+            <a href="#" class="collection-item">instagram</a>
+          </div>
+        </div>
+        <div class="s10 col">
+          columna derecha
+        </div>
       </div>
 
-    </div>
-
-    <div class="row">
-      <div class="s3 col">
-        columna izq
-      </div>
-      <div class="s9 col">
-        columna derecha
-      </div>
     </div>
 
 
