--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     -->
     <div class="row">
       <div class="navbar-fixed">
-        <nav class="nav-extended">
+        <nav class="nav-extended blue darken-1">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
@@ -56,7 +56,7 @@
           </div>
         </nav>
       </div>
-      <div class="s12 col teal lighten-2 center"> <h5>Arquitecto de mi propio destino...</h5></div>
+      <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
         <div class="s2 col">
           <div class="collection">
