Se actualizan enlaces a otras paginas

--- a/history.html
+++ b/history.html
@@ -12,10 +12,9 @@
     <title>Blog de Turismo</title>
   </head>
   <body>
-
     <div class="row">
       <div class="navbar-fixed">
-        <nav class="nav-extended">
+        <nav class="nav-extended blue darken-1">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
@@ -25,13 +24,23 @@
               <li><a class="btn" href="suggestions.html"><i class="small material-icons left">announcement</i>Sugerencias</a></li>
             </ul>
           </div>
-          <div class="nav-content center">
-            <span class="nav-title">Arquitecto de mi propio destino</span>
-          </div>
         </nav>
-
       </div>
-
+      <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
+      <div class="row">
+        <div class="s2 col">
+          <div class="collection">
+            <a href="#" class="collection-item">face</a>
+            <a href="#" class="collection-item">twitter</a>
+            <a href="#" class="collection-item">pinterest</a>
+            <a href="#" class="collection-item">youtube</a>
+            <a href="#" class="collection-item">instagram</a>
+          </div>
+        </div>
+        <div class="s10 col">
+          columna derecha
+        </div>
+      </div>
 
     </div>
 
