--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         </div>
         <div class="s10 col card">
           <div class="card-content">
-            <div class="s2 col card">
+            <div class="s2 col card galery-1">
               <img src="img/img-3.jpg" alt="" class="responsive-img">
               <img src="img/img-6.jpg" alt="" class="responsive-img">
               <img src="img/img-7.jpg" alt="" class="responsive-img">
               <img src="img/img-12.jpg" alt="" class="responsive-img">
             </div>
-            <div class="s4 col card">
+            <div class="s4 col card galery-2">
                 <img src="img/img-5.jpg" alt="" class="responsive-img">
             </div>
-            <div class="s4 col card">
+            <div class="s4 col card galery-3">
               <img src="img/img-4.jpg" alt="" class="responsive-img">
               <img src="img/img-6.jpg" alt="" class="responsive-img">
             </div>
