Ajuste de galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="row">
-      <div class="navbar-fixed">
+      <div class="navbar-fixed"> <!-- Barra de Navegaciòn -->
         <nav class="nav-extended blue darken-1">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
@@ -28,7 +28,7 @@
       </div>
       <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
-        <div class="s2 col">
+        <div class="s2 m2 l2 col"> <!-- Redes Sociales -->
           <div class="collection">
             <a href="#" class="collection-item">face</a>
             <a href="#" class="collection-item">twitter</a>
@@ -37,22 +37,26 @@
             <a href="#" class="collection-item">instagram</a>
           </div>
         </div>
-        <div class="s10 col card">
-          <div class="card-content">
-            <div class="s2 col card z-depth-3 galery-1">
-              <img src="img/img-3.jpg" alt="" class="responsive-img">
-              <img src="img/img-6.jpg" alt="" class="responsive-img">
-              <img src="img/img-7.jpg" alt="" class="responsive-img">
-              <img src="img/img-12.jpg" alt="" class="responsive-img">
+        <div class="s10 m10 l10 col"> <!-- Galeria de Imagenes-->
+
+          <div class="s12 m12 l12 col">
+            <div class="card-content">
+              <div class="s2 m2 l2 col card z-depth-3 galery-1">
+                <img src="img/img-3.jpg" alt="" class="responsive-img">
+                <img src="img/img-6.jpg" alt="" class="responsive-img">
+                <img src="img/img-7.jpg" alt="" class="responsive-img">
+                <img src="img/img-12.jpg" alt="" class="responsive-img">
+              </div>
+              <div class="s5 m5 l5 col card z-depth-3 galery-2">
+                  <img src="img/img-5.jpg" alt="" class="responsive-img">
+              </div>
+              <div class="s5 m5 l5 col card z-depth-3 galery-3">
+                <img src="img/img-4.jpg" alt="" class="responsive-img">
+                <img src="img/img-6.jpg" alt="" class="responsive-img">
+              </div>
             </div>
-            <div class="s4 col card z-depth-3 galery-2">
-                <img src="img/img-5.jpg" alt="" class="responsive-img">
-            </div>
-            <div class="s4 col card z-depth-3 galery-3">
-              <img src="img/img-4.jpg" alt="" class="responsive-img">
-              <img src="img/img-6.jpg" alt="" class="responsive-img">
-            </div>
-        </div>
+          </div>
+
         </div>
       </div>
 
