Se agrega entrada del blog

--- a/index.html
+++ b/index.html
@@ -28,36 +28,68 @@
       </div>
       <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
-        <div class="s2 m2 l2 col"> <!-- Redes Sociales -->
+        <div class="s1 m1 l1 col"> <!-- Redes Sociales -->
           <div class="collection">
-            <a href="#" class="collection-item">face</a>
-            <a href="#" class="collection-item">twitter</a>
-            <a href="#" class="collection-item">pinterest</a>
-            <a href="#" class="collection-item">youtube</a>
-            <a href="#" class="collection-item">instagram</a>
+            <a href="#" class="collection-item">fbk</a>
+            <a href="#" class="collection-item">twit</a>
+            <a href="#" class="collection-item">pint</a>
+            <a href="#" class="collection-item">yout</a>
+            <a href="#" class="collection-item">insta</a>
           </div>
         </div>
-        <div class="s10 m10 l10 col"> <!-- Galeria de Imagenes-->
 
+        <div class="s11 m11 l11 col"> <!-- Galeria de Imagenes-->
           <div class="s12 m12 l12 col">
             <div class="card-content">
-              <div class="s2 m2 l2 col card z-depth-3 galery-1">
+              <div class="s3 m3 l3 col card z-depth-3 galery-1">
                 <img src="img/img-3.jpg" alt="" class="responsive-img">
                 <img src="img/img-6.jpg" alt="" class="responsive-img">
                 <img src="img/img-7.jpg" alt="" class="responsive-img">
-                <img src="img/img-12.jpg" alt="" class="responsive-img">
+                <!--<img src="img/img-12.jpg" alt="" class="responsive-img">-->
               </div>
               <div class="s5 m5 l5 col card z-depth-3 galery-2">
                   <img src="img/img-5.jpg" alt="" class="responsive-img">
               </div>
-              <div class="s5 m5 l5 col card z-depth-3 galery-3">
+              <div class="s4 m4 l4 col card z-depth-3 galery-3">
                 <img src="img/img-4.jpg" alt="" class="responsive-img">
                 <img src="img/img-6.jpg" alt="" class="responsive-img">
               </div>
             </div>
           </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="s12 m12 l12 col">
+          <div class="s8 m8 l8 col">
+            <h2 class="header">Volcán Mazaya</h2>
+            <p>Managua; Nicaragua.  27 de Diciembre 2017.</p>
+            <div class="card horizontal">
+              <div class="card-image">
+                <img src="img/img-8.jpg">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
+                  </p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="s4 m4 l4 col left">
+            <div class="contenedor-autor card">
+              <span>autor</span>
+
+            </div>
+
+
+          </div>
+
 
         </div>
+
       </div>
 
     </div>
