Se agrega seccion de comentarios

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                 </div>
               </div>
             </div>
-
+            <div class="input-field s12 m12 l12"> <!-- Seccion de comentarios -->
+              <i class="material-icons prefix">person</i>
+              <textarea id="textarea-1" class="materialize-textarea"></textarea>
+              <label for="textarea-1">Comentario...</label>
+            </div>
           </div>
           <div class="s4 m4 l4 col left">
             <div class="contenedor-autor card teal lighten-1 center-align">
@@ -91,11 +95,8 @@
               </p>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
