--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
             <div class="input-field s12 m12 l12"> <!-- Seccion de comentarios -->
               <i class="material-icons prefix">person</i>
-              <textarea id="textarea-1" class="materialize-textarea"></textarea>
-              <label for="textarea-1">Comentario...</label>
+              <input id="comentarios" type="text" name="">
+              <label for="comentarios">Comentarios...</label>
             </div>
           </div>
           <div class="s4 m4 l4 col left">
@@ -92,6 +92,7 @@
               <hr>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
               </p>
             </div>
           </div>
