Se actualizan redes sociales

--- a/index.html
+++ b/index.html
@@ -30,11 +30,21 @@
       <div class="row">
         <div class="s1 m1 l1 col"> <!-- Redes Sociales -->
           <div class="collection">
-            <a href="#" class="collection-item">fbk</a>
-            <a href="#" class="collection-item">twit</a>
-            <a href="#" class="collection-item">pint</a>
-            <a href="#" class="collection-item">yout</a>
-            <a href="#" class="collection-item">insta</a>
+            <a class="collection-item avatar">
+              <img src="img/ig.png" alt="">
+            </a>
+            <a class="collection-item avatar">
+              <img src="img/fb.png" alt="">
+            </a>
+            <a class="collection-item avatar">
+              <img src="img/tt.png" alt="">
+            </a>
+            <a class="collection-item avatar">
+              <img src="img/pn.png" alt="">
+            </a>
+            <a class="collection-item avatar">
+              <img src="img/yt.png" alt="">
+            </a>
           </div>
         </div>
 
