--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="row">
       <div class="navbar-fixed"> <!-- Barra de Navegaciòn -->
-        <nav class="nav-extended grey">
+        <nav class="nav-extended grey lighten-">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
@@ -30,19 +30,19 @@
       <div class="row">
         <div class="s1 m1 l1 col"> <!-- Redes Sociales -->
           <div class="collection">
-            <a class="collection-item avatar">
+            <a href="#" class="collection-item grey lighten-1">
               <img src="img/ig.png" alt="">
             </a>
-            <a class="collection-item avatar">
+            <a href="#" class="collection-item grey lighten-1">
               <img src="img/fb.png" alt="">
             </a>
-            <a class="collection-item avatar">
+            <a href="#" class="collection-item grey lighten-1">
               <img src="img/tt.png" alt="">
             </a>
-            <a class="collection-item avatar">
+            <a href="#" class="collection-item grey lighten-1">
               <img src="img/pn.png" alt="">
             </a>
-            <a class="collection-item avatar">
+            <a href="#" class="collection-item grey lighten-1">
               <img src="img/yt.png" alt="">
             </a>
           </div>
@@ -55,7 +55,6 @@
                 <img src="img/img-3.jpg" alt="" class="responsive-img">
                 <img src="img/img-6.jpg" alt="" class="responsive-img">
                 <img src="img/img-7.jpg" alt="" class="responsive-img">
-                <!--<img src="img/img-12.jpg" alt="" class="responsive-img">-->
               </div>
               <div class="s5 m5 l5 col card z-depth-3 galery-2">
                   <img src="img/img-5.jpg" alt="" class="responsive-img">
