Reorganizacion galeria de imagenes

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
             <div class="card-content">
               <div class="s3 m3 l3 col card z-depth-3 galery-1">
                 <img src="img/img-3.jpg" alt="" class="responsive-img">
-                <img src="img/img-6.jpg" alt="" class="responsive-img">
-                <img src="img/img-7.jpg" alt="" class="responsive-img">
+                <img src="img/img-4.jpg" alt="" class="responsive-img">
+                <img src="img/img-12.jpg" alt="" class="responsive-img">
               </div>
               <div class="s5 m5 l5 col card z-depth-3 galery-2">
                   <img src="img/img-5.jpg" alt="" class="responsive-img">
               </div>
               <div class="s4 m4 l4 col card z-depth-3 galery-3">
-                <img src="img/img-4.jpg" alt="" class="responsive-img">
                 <img src="img/img-6.jpg" alt="" class="responsive-img">
+                <img src="img/img-7.jpg" alt="" class="responsive-img">
               </div>
             </div>
           </div>
@@ -71,7 +71,7 @@
 
       <div class="row">
         <div class="s12 m12 l12 col">
-          <div class="s8 m8 l8 col">
+          <div class="s8 m8 l8 col"> <!-- Primer publicacion -->
             <h2 class="header">Volcán Mazaya</h2>
             <p>Managua; Nicaragua.  27 de Diciembre 2017.</p>
             <div class="card horizontal">
