Se agregan comentarios al codigo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="s4 m4 l4 col card z-depth-3 galery-3">
                 <img src="img/img-6.jpg" alt="" class="responsive-img">
-                <img src="img/img-7.jpg" alt="" class="responsive-img">
+                <img src="img/img-9.jpg" alt="" class="responsive-img">
               </div>
             </div>
           </div>
@@ -71,9 +71,9 @@
 
       <div class="row">
         <div class="s12 m12 l12 col">
-          <div class="s8 m8 l8 col"> <!-- Primer publicacion -->
-            <h2 class="header">Volcán Mazaya</h2>
-            <p>Managua; Nicaragua.  27 de Diciembre 2017.</p>
+          <div class="s8 m8 l8 col">
+            <h2 class="header">Volcán Mazaya</h2> <!-- Primer publicacion -->
+            <p>Managua; Nicaragua.  27 de Diciembre 2017. 1 comentario.</p>
             <div class="card horizontal">
               <div class="card-image">
                 <img src="img/img-8.jpg">
@@ -88,7 +88,28 @@
                 </div>
               </div>
             </div>
-            <div class="input-field s12 m12 l12"> <!-- Seccion de comentarios -->
+            <div class="input-field s12 m12 l12 col"> <!-- Seccion de comentarios 1er publicacion-->
+              <i class="material-icons prefix">person</i>
+              <input id="comentarios" type="text" name="">
+              <label for="comentarios">Comentarios...</label>
+            </div>
+            <h2 class="header">Riviera Maya</h2> <!-- Segunda Publicacion -->
+            <p>Puerto Vallarta. 06 Enero 2018.3 comentaios.</p>
+            <div class="card horizontal">
+              <div class="card-image">
+                <img src="img/img-10.jpg" alt="">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                    Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+                    Itaque earum rerum hic tenetur a sapiente delectus.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="input-field s12 m12 l12 col"> <!-- Seccion de comentarios 2da publicacion-->
               <i class="material-icons prefix">person</i>
               <input id="comentarios" type="text" name="">
               <label for="comentarios">Comentarios...</label>
