Se ocultan social-networks en dispositivos pequeños

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
-        <div class="s1 m1 l1 col"> <!-- Redes Sociales -->
+        <div class="s1 m1 l1 col hide-on-small-only"> <!-- Redes Sociales -->
           <div class="collection">
             <a href="#" class="collection-item grey lighten-1">
               <img src="img/ig.png" alt="">
