Se oculta informacion del autor en pantallas pequeñas

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <label for="comentarios">Comentarios...</label>
             </div>
           </div>
-          <div class="s4 m4 l4 col left">
+          <div class="s4 m4 l4 col left hide-on-small-only"> <!-- Acerca del autor-->
             <div class="contenedor-autor card teal lighten-1 center-align">
               <img class="circle responsive-img" src="img/autor-1.jpg">
               <h5>Sobre el autor.</h5>
