Se elimina el card horizontal

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
       <div class="row">
         <div class="s12 m12 l12 col">
-          <div class="s8 m8 l8 col">
+          <div class="s12 m8 l8 col">
             <h2 class="header">Volcán Mazaya</h2> <!-- Primer publicacion -->
             <p>Managua; Nicaragua.  27 de Diciembre 2017. 1 comentario.</p>
-            <div class="card horizontal">
+            <div class="card">
               <div class="card-image">
                 <img src="img/img-8.jpg">
               </div>
@@ -95,7 +95,7 @@
             </div>
             <h2 class="header">Riviera Maya</h2> <!-- Segunda Publicacion -->
             <p>Puerto Vallarta. 06 Enero 2018.3 comentaios.</p>
-            <div class="card horizontal">
+            <div class="card">
               <div class="card-image">
                 <img src="img/img-10.jpg" alt="">
               </div>
