--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
       </div>
       <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
-        <div class="s1 m1 l1 col hide-on-small-only"> <!-- Redes Sociales -->
+        <div class="s1 m1 l1 col hide-on-med-and-down"> <!-- Redes Sociales -->
           <div class="collection">
             <a href="#" class="collection-item grey lighten-1">
-              <img src="img/ig.png" alt="">
+              <img src="img/ig.png" alt="" class="responsive-img">
             </a>
             <a href="#" class="collection-item grey lighten-1">
-              <img src="img/fb.png" alt="">
+              <img src="img/fb.png" alt="" class="responsive-img">
             </a>
             <a href="#" class="collection-item grey lighten-1">
-              <img src="img/tt.png" alt="">
+              <img src="img/tt.png" alt="" class="responsive-img">
             </a>
             <a href="#" class="collection-item grey lighten-1">
-              <img src="img/pn.png" alt="">
+              <img src="img/pn.png" alt="" class="responsive-img">
             </a>
             <a href="#" class="collection-item grey lighten-1">
-              <img src="img/yt.png" alt="">
+              <img src="img/yt.png" alt="" class="responsive-img">
             </a>
           </div>
         </div>
 
-        <div class="s11 m11 l11 col"> <!-- Galeria de Imagenes-->
+        <div class="s12 m11 l11 col"> <!-- Galeria de Imagenes-->
           <div class="s12 m12 l12 col">
             <div class="card-content">
               <div class="s3 m3 l3 col card z-depth-3 galery-1">
