--- a/suggestions.html
+++ b/suggestions.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div class="row">
-      <div class="navbar-fixed">
-        <nav class="nav-extended blue darken-1">
+      <div class="navbar-fixed"> <!-- Barra de Navegaciòn -->
+        <nav class="nav-extended grey lighten-">
           <div class="nav-wrapper">
             <a class="brand-logo left" href="#"><img src="img/logo.jpg" alt="logo"></a>
             <ul class="right hide-on-med-and-down">
@@ -28,20 +28,106 @@
       </div>
       <div class="s12 col teal lighten-1 center"><h5>Arquitecto de mi propio destino...</h5></div>
       <div class="row">
-        <div class="s2 col">
+        <div class="s1 m1 l1 col hide-on-med-and-down"> <!-- Redes Sociales -->
           <div class="collection">
-            <a href="#" class="collection-item">face</a>
-            <a href="#" class="collection-item">twitter</a>
-            <a href="#" class="collection-item">pinterest</a>
-            <a href="#" class="collection-item">youtube</a>
-            <a href="#" class="collection-item">instagram</a>
+            <a href="#" class="collection-item grey lighten-1">
+              <img src="img/ig.png" alt="" class="responsive-img">
+            </a>
+            <a href="#" class="collection-item grey lighten-1">
+              <img src="img/fb.png" alt="" class="responsive-img">
+            </a>
+            <a href="#" class="collection-item grey lighten-1">
+              <img src="img/tt.png" alt="" class="responsive-img">
+            </a>
+            <a href="#" class="collection-item grey lighten-1">
+              <img src="img/pn.png" alt="" class="responsive-img">
+            </a>
+            <a href="#" class="collection-item grey lighten-1">
+              <img src="img/yt.png" alt="" class="responsive-img">
+            </a>
           </div>
         </div>
-        <div class="s10 col">
-          columna derecha
+
+        <div class="s12 m11 l11 col"> <!-- Galeria de Imagenes-->
+          <div class="s12 m12 l12 col">
+            <div class="card-content">
+              <div class="s3 m3 l3 col card z-depth-3 galery-1">
+                <img src="img/img-3.jpg" alt="" class="responsive-img">
+                <img src="img/img-4.jpg" alt="" class="responsive-img">
+                <img src="img/img-12.jpg" alt="" class="responsive-img">
+              </div>
+              <div class="s5 m5 l5 col card z-depth-3 galery-2">
+                  <img src="img/img-5.jpg" alt="" class="responsive-img">
+              </div>
+              <div class="s4 m4 l4 col card z-depth-3 galery-3">
+                <img src="img/img-6.jpg" alt="" class="responsive-img">
+                <img src="img/img-9.jpg" alt="" class="responsive-img">
+              </div>
+            </div>
+          </div>
         </div>
+
       </div>
 
+      <div class="row">
+        <div class="s12 m12 l12 col">
+          <div class="s12 m8 l8 col">
+            <h2 class="header">Volcán Mazaya</h2> <!-- Primer publicacion -->
+            <p>Managua; Nicaragua.  27 de Diciembre 2017. 1 comentario.</p>
+            <div class="card">
+              <div class="card-image">
+                <img src="img/img-8.jpg">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                    Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+                    Itaque earum rerum hic tenetur a sapiente delectus.
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="input-field s12 m12 l12 col"> <!-- Seccion de comentarios 1er publicacion-->
+              <i class="material-icons prefix">person</i>
+              <input id="comentarios" type="text" name="">
+              <label for="comentarios">Comentarios...</label>
+            </div>
+            <h2 class="header">Riviera Maya</h2> <!-- Segunda Publicacion -->
+            <p>Puerto Vallarta. 06 Enero 2018.3 comentaios.</p>
+            <div class="card">
+              <div class="card-image">
+                <img src="img/img-10.jpg" alt="">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                    Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+                    Itaque earum rerum hic tenetur a sapiente delectus.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="input-field s12 m12 l12 col"> <!-- Seccion de comentarios 2da publicacion-->
+              <i class="material-icons prefix">person</i>
+              <input id="comentarios" type="text" name="">
+              <label for="comentarios">Comentarios...</label>
+            </div>
+          </div>
+          <div class="s4 m4 l4 col left hide-on-small-only"> <!-- Acerca del autor-->
+            <div class="contenedor-autor card teal lighten-1 center-align">
+              <img class="circle responsive-img" src="img/autor-1.jpg">
+              <h5>Sobre el autor.</h5>
+              <hr>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
